add parallax scroll section

--- a/react/src/components/Compare/compare.scss
+++ b/react/src/components/Compare/compare.scss
@@ -51,7 +51,7 @@
   height: 50vh;
 }
 .remove-compare {
-  background: linear-gradient(30deg, var(--delete), var(--wheat-title));
+  background: linear-gradient(30deg, var(--delete), var(--wheat-lighter));
 }
 .unselect-par {
   position: absolute;
