--- a/react/src/styles/page/_sort.scss
+++ b/react/src/styles/page/_sort.scss
@@ -5,8 +5,8 @@
   width: 100%;
   position: relative;
   max-width: 1250px;
-  margin: 0 auto;
-  margin-bottom: 5px;
+  margin: 5px auto;
+  margin-top: 0;
   div.sort-actions {
     padding: 0 15px;
     gap: 20px;
