--- a/react/src/components/Footer/footer.scss
+++ b/react/src/components/Footer/footer.scss
@@ -63,6 +63,7 @@ footer {
 
     a {
       text-transform: capitalize;
+      opacity: 0.7;
       color: var(--third-light);
       text-align: start;
       transition: 0.3s;
@@ -131,4 +132,8 @@ footer {
   .contact-txt {
     opacity: 0.7;
   }
+}
+
+.footer-logo {
+  filter: drop-shadow(var(--third-shadow));
 }
