--- a/react/src/loading/_loading.scss
+++ b/react/src/loading/_loading.scss
@@ -1,6 +1,14 @@
 @import "../styles/variables.scss";
+
 .loading {
+  --loading: var(--secondary);
   width: 100%;
   height: 100vh;
-  filter: drop-shadow(var(--third-shadow));
+  .loading-logo {
+    svg {
+      width: 150px;
+      height: 40px;
+      filter: drop-shadow(var(--third-shadow));
+    }
+  }
 }
