--- a/react/src/styles/globels/dropdown.scss
+++ b/react/src/styles/globels/dropdown.scss
@@ -5,17 +5,26 @@
   position: absolute;
   top: 102%;
   right: 0;
-  z-index: 10;
+  box-shadow: var(--secondary-shadow);
   &.centered {
     right: 50%;
     transform: translateX(-50%);
     top: 105%;
   }
-  z-index: 4;
-  box-shadow: var(--third-shadow);
+
   border-radius: 2px;
   padding: 6px 0;
+
   background: var(--secondary);
+  z-index: 25;
+  &.main-clr {
+    background: var(--main);
+    .result {
+      &:hover {
+        background-color: var(--secondary);
+      }
+    }
+  }
   color: var(--third);
   align-items: flex-start;
   cursor: pointer;
@@ -116,7 +125,7 @@
       top: 0;
       left: initial;
       min-height: 100vh;
-      z-index: 6;
+
       border-radius: initial;
     }
   }
